# typus_fugit

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: build.yml  changelog.yml
src/: aliases.rs  duration.rs  helpers.rs  instant.rs  lib.rs  rate.rs
src/duration/: macros.rs  period.rs
src/instant/: macros.rs
src/rate/: macros.rs
