[package]
name = "typus_fugit"
version = "0.1.0"
edition = "2021"
authors = ["Ben Pieters-Hawke <benphawke@gmail.com>"]
description = "`typenum` powered time library for the embedded ecosystem."
keywords = ["Time", "Duration", "Instant", "const"]
categories = ["date-and-time", "embedded", "no-std"]
readme = "README.md"
repository = "https://github.com/Ben-PH/fugit"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcd = ">=2.1,<3.0"
typenum = "1.17.0"

[dependencies.defmt]
version = ">=0.2.0,<0.4"
optional = true

[package.metadata.docs.rs]
all-features = true
